     - added Unicode Codepoint name to the status bar for the character after the cursor to CodeView
     - extended the Codepoint name to include the codepoint itself (Thank you BeckyEbook)
     - converted ClipboardHistorySelector dialog to be non-modal, auto updating, with min button
     - converted MDViewer (GetInfo) to be non-modal and work with multiple BookBrowser selections


Sigil- 2.7.0
   Bug Fixes
     - make validation of css via W3C network validator work more consistently (http: -> https:)
     - make sure repomanager.py works with pre- and post-0.23 dulwich
     - fixes for potential crashes from using unitialized member pointers
     - fix issues with ClipsWindow and m_LastPasteTarget
     - remove QtPositioning from being needed in QtWebEngine builds on MacOS
     - fix bug with double-click to select "word" in CV not working the some for intl langauges
     - fix issues by alerting user to file path duplication during initial load of epub

   New Features
     - update to Qt 6.9.3 with some additional patches
     - update to PCRE2 version 10.46
     - update WebProfileMgr to use the new QWebEngneProfileBuilder to properly set up disk caches
     - modify HeadingChange and CaseChange ToolButtons to remember last used action
     - add in a custom Windows manifest file so that Windows open-with works
     - create a new dynamic Automation menu to replace the older toolbar only version (hideable by the user)
     - allow up to 9 most recent files in the Sigil File menu
     - use environment var "SIGIL_ONLY_USE_LANGCODES" to restrict long List of Language codes to user's choice
     - the Metadata Editor now has a pop up context menu to make navigation easier
     - the Metadata Editor will now respond as expected to right and left arrow keys for navigation
     - added support for 2 additional Automation tools available for use in Automation Lists
         - OnFailedRunSavedSearchReplaceAll